namespace CrisisConnect.Domain.Enums;

public enum TypeNotification
{
    RappelRoleExpirationImminente,
    RelancePropositionAvantArchivage,
    PanierAnnuleOffreRemiseActive,
    IntentionDonAcceptee,
    IntentionDonRefusee,
    IntentionDonConfirmationRequise,
    OffreSatisfaite75Pourcent,
    SuggestionAppariementDisponible
}
